# DFV-Agent

./: DFA Agent Main.ipynb  DFV Agent Main.ipynb  DFV_json.ipynb  DFV_json_main.ipynb  Trial.ipynb  desirability_agent.ipynb  dfv_json.py  main.py  pyproject.toml
DFV-agent/: DFV Agent Main.ipynb  main.py  producer.py  pyproject.toml  worker.py
DFV-agent/Outputs/: Blnkt qwen 9b.html  ewaste_all_strong qwen 9b.html  ewaste_desirability_viability_weak qwen 9b.html  ewaste_feasibility_weak qwen 9b.html  ggls qwen 9b.html  qubi qwen 9b.html  sncc qwen 9b.html
DFV-agent/skills/d-skills/: SKILL.md
DFV-agent/skills/f-skills/: SKILL.md
DFV-agent/skills/v-skills/: SKILL.md
Outputs/: Bonsai Output,0.8,4096, P1.html  DFA Agent Bonsai, 0.1, max.html  DFA, gemma e4b, 0.1, 80k.html  DFA, qwen3.5-9b,0.1,80k .html  DFV Agent Main Qwen 3.6 35b.html  DFV Agent Main Qwen 3.6. 35b Qubi.html  DFV Agent Main gemma hallucinated.html  DFV Agent Main qwen 3.6 35b sncc.html  DFV Agent Main qwen 35b blnkt.html  Qwen output P1 Failed.ipynb
entrepreneurship_coach/: README.md
skills/d-skills/: SKILL.md
skills/evaluator-skills/: SKILL.md
skills/f-skills/: SKILL.md
skills/v-skills/: SKILL.md
src/entrepreneurship_coach/: main.py
src/entrepreneurship_coach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/entrepreneurship_coach/crews/dfv_crew/: dfv_crew.py
src/entrepreneurship_coach/crews/dfv_crew/config/: agents.yaml  tasks.yaml
