[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "entrepreneurship-coach"
version = "0.1.0"
description = "Coach for entrepreneurship ideas using DFV framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=1.14.6,<2",
    "pydantic>=2.11.9,<2.13",
]

[tool.setuptools.packages.find]
where = ["src"]
